src/objects/Account__c.object
<CustomObject>
    <description>Investment is used to manage how clients invest with MFS, which links to Portfolios, Organizations, and Plans.</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Start_Date__c</fullName>
        <label>Account Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Termination_Date__c</fullName>
        <label>Account Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Type_Asset_Source__c</fullName>
        <label>Account Type / Asset Source</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Allocation Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Contribution (covers deferred Compensation)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discretionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund of Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSA - Health Savings Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual/Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance General Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Variable Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Variable Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Seed Money</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Decommission Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA/PPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sovereign Wealth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subadvised 40-Act</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subadvised non-40-Act</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superannuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VEBA – Variable Employee Benefit Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working Capital/Balance Sheet Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Adj.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Advisory</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Account_Numbers__c</fullName>
        <description>Used for extra Maverick Account Numbers</description>
        <label>Additional Account Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Composite_Name__c</fullName>
        <formula>TEXT( Portfolio__r.Distribution_Composite__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Composite Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERISA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ERISA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FYE_Month_and_Day__c</fullName>
        <label>FYE Month and Day</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Omnibus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Omnibus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Investments</relationshipLabel>
        <relationshipName>Portfolio2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Performance_Start_Date__c</fullName>
        <inlineHelpText>First day of change in performance</inlineHelpText>
        <label>Performance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Plan/Portfolio</description>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipName>Portfolios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pooled_Port_Code__c</fullName>
        <label>Pooled Port Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Code__c</fullName>
        <formula>Portfolio__r.Portfolio_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Investments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Style__c</fullName>
        <formula>Text(Portfolio__r.Style__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Style</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Currency__c</fullName>
        <label>Reporting Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Language__c</fullName>
        <label>Reporting Language</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese-HK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese-Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch-Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English-UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French-Canadian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French-France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French-Swiss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German-Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwegian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Name__c</fullName>
        <label>Reporting Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Share Class</label>
        <referenceTo>Share_Classes__c</referenceTo>
        <relationshipName>Investments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubPort_Code__c</fullName>
        <label>SubPort Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <formula>TEXT(Portfolio__r.Vehicle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle</label>
        <type>Text</type>
    </fields>
    <label>Client Investment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Portfolio__c</columns>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Plan__c</columns>
        <columns>Portfolio_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Investment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Investments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_Number_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(Account_Number__c) &amp;&amp; !ISNUMBER(Account_Number__c)</errorConditionFormula>
        <errorDisplayField>Account_Number__c</errorDisplayField>
        <errorMessage>Account Number must contain only digits</errorMessage>
    </validationRules>
</CustomObject>